updated ci-cd implementation:  Add GitHub Actions workflow for building and testing QuoteOTD service, Configure QuoteOTD service with H2 database, JPA initialization settings, and Actuator endpoints.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,39 @@
-#H2 Database settings
+# CORE SERVER AND APPLICATION SETTINGS
+server.port=8080
+spring.application.name=quote-otd-service
+management.endpoints.web.base-path=/actuator
+
+# H2 Database settings (In-Memory)
 spring.datasource.url=jdbc:h2:mem:quotedb
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.username=cvonfeldt
+spring.datasource.password=164788
 
 # JPA/Hibernate Settings (for automatic table creation)
 spring.jpa.hibernate.ddl-auto=create # Creates tables on startup
 spring.jpa.show-sql=true
 
+# Database Initialization
+# This ensures data.sql rusn to populate your quotes
+spring.sql.init.mode=always 
+spring.datasource.platform=h2
+spring.jpa.defer-datasource-initialization=true # Ensures JPA tables are created before data.sql runs
+
+# mONITORING AND MANAGEMENT (Actuator)
+# Enable specific Actuator endpoints that are useful for monitoring
+management.endpoints.web.exposure.include=health,info,env,loggers,metrics
+# Expose the shutdown endpoint for managed termination (often useful in containers)
+# management.endpoint.shutdown.enabled=true 
+
 # Enable H2 Web Console (acessible at http://localhost:8080/h2-console)
 spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+
+#  LOGGING 
+# General application logging level
+logging.level.root=INFO 
+# Set logging specifically for SQL/JPA to DEBUG if you need detailed query analysis
+logging.level.org.hibernate.SQL=DEBUG
+# Set logging for H2 console
+logging.level.org.springframework.web=INFO
