--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -27,13 +27,12 @@ jobs:
     # 4. Compile, Test, and Build (The Core Steps)
     # This runs 'package' goal against the pom.xml in QuoteOTD folder.
     - name: Build with Maven
-      run: mvn -B package
-      working-directory: QuoteOTD
+      run: mvn -B package --file QuoteOTD/pom.xml
       
     # 5. Archive the built artifact (the executable JAR)
     - name: Upload JAR Artifact
       uses: actions/upload-artifact@v4
       with:
         name: quote-otd-jar
-        path: QuoteOTD/target/*.jar
+        path: QuoteOTD/target/*.jar 
         retention-days: 5
