--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -25,15 +25,15 @@ jobs:
         cache: 'maven'
 
     # 4. Compile, Test, and Build (The Core Steps)
-    # This runs 'package' goal against the pom.xml in QuoteOTD folder.
+    # This runs 'package' goal against the pom.xml in the repository root.
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      run: mvn -B package --file ./pom.xml
       
     # 5. Archive the built artifact (the executable JAR)
     - name: Upload JAR Artifact
       uses: actions/upload-artifact@v4
       with:
         name: quote-otd-jar
-        # The JAR is now likely in target/
-        path: target/*.jar 
+        # The JAR is built in target/ directory relative to pom.xml location
+        path: ./target/*.jar 
         retention-days: 5
